# ToyJVM

./: .gitignore  .gitignore.swp  CMakeLists.txt  README.md  build.sh  pom.xml  readme.md  requirements.txt
etc/: .instructions.json.swp  instructions.json
include/: cmd.h  cmdline.h  exception.h  log.h  types.h
include/classfile/: attr_code.h  attr_constant_value.h  attr_exceptions.h  attr_line_number_table.h  attr_local_variable_table.h  attr_markers.h  attr_source_file.h  attr_unparsed.h  attributeinfo.h  classfile.h  classreader.h  constantPool.h  constantinfo.h  cp_class.h  cp_invoke_dynamic.h  cp_member_ref.h  cp_name_type.h  cp_numeric.h  cp_string.h  cp_utf8.h  memberinfo.h
include/classpath/: classpath.h  entry.h  entry_impls.h
include/jvm/: interpret.h
include/jvm/classfile/: attribute_infos.h  attribute_table.h  classfile.h  classreader.h  constant_infos.h  constant_pool.h  member_info.h
include/jvm/classpath/: base_entry.h  classpath.h
include/jvm/exception/: exceptions.h
include/jvm/instruction/: .array_instructions.h.swp  .base_instruction.h.swp  array_instructions.h  base_instruction.h  bytecode_reader.h  bytecodereader.h  compare_instructions.h  const_instructions.h  control_instructions.h  convert_instructions.h  extended_instructions.h  instruction.h  invoke_instructions.h  load_instructions.h  math_instructions.h  ref_instructions.h  return_instructions.h  stack_instructions.h  store_instructions.h
include/jvm/native/: array_copy.h  get_primitive_class.h  jl_math.h  reflect.h  registy.h  throwable.h
include/jvm/rtdata/: access_flag.h  class_loader.h  exceptions.h  (+11 more)
include/toyjvm/: main.h
include/util/: byteutils.h  commonutils.h  fileutils.h  stringutils.h
src/: .main.cpp.swp  cmd.cpp  interpret.cpp  log.cpp  main.cpp
src/classfile/: CMakeLists.txt  attr_code.cpp  attr_constant_value.cpp  attr_exceptions.cpp  attr_line_number_table.cpp  attr_local_variable_table.cpp  attr_source_file.cpp  attr_unparsed.cpp  attribute_infos.cpp  attribute_table.cpp  attributeinfo.cpp  classfile.cpp  classinfo.cpp  classreader.cpp  constantPool.cpp  constant_infos.cpp  constant_pool.cpp  constantinfo.cpp  cp_class.cpp  cp_invoke_dynamic.cpp  cp_member_ref.cpp  cp_name_type.cpp  cp_numeric.cpp  cp_string.cpp  cp_utf8.cpp  member_info.cpp  memberinfo.cpp
src/classpath/: CMakeLists.txt  class_path.cpp  classpath.cpp  entry.cpp  entry_impls.cpp  path_entry.cpp
src/common/: CMakeLists.txt  cmdline.cpp  ioutils.cpp  system.cpp
src/instruction/: .array_instructions.cpp.swp  .base_instruction.cpp.swp  array_instructions.cpp  base_instruction.cpp  bytecode_reader.cpp  control_instructions.cpp  extended_instructions.cpp  invoke_instructions.cpp  math_instructions.cpp  ref_instructions.cpp  stack_instructions.cpp
src/libzippp/: libzippp.cpp
src/native/: .array_copy.cpp.swp  array_copy.cpp  get_primitive_class.cpp  jl_math.cpp  reflect.cpp  registy.cpp  throwable.cpp
src/rtdata/: .jvm_class.cpp.swp  .local_vars.cpp.swp  class_loader.cpp  exceptions.cpp  jvm_class.cpp  jvm_member.cpp  jvm_reference.cpp  jvm_thread.cpp  local_vars.cpp  method_descriptor.cpp  operand_stack.cpp  runtime_const_pool.cpp  string_pool.cpp  symbol_ref.cpp
src/util/: byteutils.cpp  commonutils.cpp  fileutils.cpp  stringutils.cpp
src/utils/: instructionutils.cpp
test/: CMakeLists.txt  descriptor_test.cpp
toyjvm/: CMakeLists.txt  main.cpp  main.h
toyjvm/classfile/: CMakeLists.txt  attribute_infos.cpp  attribute_infos.h  attribute_table.cpp  attribute_table.h  classfile.cpp  classfile.h  const_infos.cpp  const_infos.h  const_pool.cpp  const_pool.h  member_info.cpp  member_info.h
toyjvm/classpath/: CMakeLists.txt  class_path.cpp  class_path.h  path_entry.cpp  path_entry.h
toyjvm/common/: CMakeLists.txt  basereader.cpp  basereader.h  cmdline.cpp  cmdline.h  exception.h  ioutils.cpp  ioutils.h  jvm_types.h  modify_utf8.h  modity_utf8.cpp  type_cast.h  zip_wrapper.h
toyjvm/common/tests/: CMakeLists.txt  test_type_cast.cpp  zip_wrapper_test.cpp
toyjvm/instruction/: CMakeLists.txt  array_instructions.cpp  array_instructions.h  base_instruction.h  bytecode_reader.cpp  bytecode_reader.h  compare_instructions.h  const_instructions.h  control_instructions.cpp  control_instructions.h  convert_instructions.h  extend_instructions.cpp  extend_instructions.h  instruction_code.h  instruction_factory.cpp  instruction_factory.h  invoke_instructions.cpp  invoke_instructions.h  load_instruction.h  load_instructions.h  math_instructions.cpp  math_instructions.h  ref_instructions.cpp  ref_instructions.h  return_instructions.h  stack_instructions.cpp  stack_instructions.h  store_instruction.h  store_instructions.h
toyjvm/instruction/tests/: CMakeLists.txt  instruction_test_context.h  test_compare_inst.cpp  test_const_inst.cpp  test_control_inst.cpp  test_convert_inst.cpp  test_inst_context.h
toyjvm/interperter/: interpret.h
toyjvm/interpreter/: CMakeLists.txt  interpret.cpp
toyjvm/native/: CMakeLists.txt  native_methods.cpp  native_methods.h
toyjvm/native/java/lang/: Class.cpp  Class.h  Object.cpp  Object.h  System.cpp  System.h  Throwable.cpp  Throwable.h  float_ant_double.cpp  float_ant_double.h
toyjvm/runtime/: CMakeLists.txt  class_loader.cpp  class_loader.h  exception_table.cpp  exception_table.h  jvm_class.cpp  jvm_class.h  jvm_frame.cpp  jvm_frame.h  jvm_member.cpp  jvm_member.h  jvm_reference.cpp  jvm_reference.h  jvm_thread.cpp  jvm_thread.h  local_slots.h  operand_stack.h  runtime_const_pool.cpp  runtime_const_pool.h  string_pool.cpp  string_pool.h  symbol_ref.cpp  symbol_ref.h
toyjvm/runtime/tests/: CMakeLists.txt  test_class_loader.cpp  test_local_slots.cpp  test_operand_stack.cpp
toyjvm/utilities/: CMakeLists.txt  access_flags.h  all_static.h  basereader.h  bytereader.h  cmdline.cpp  cmdline.h  descriptor.h  exception.h  ioutils.cpp  ioutils.h  javautils.cpp  javautils.h  jvm_types.h  method_descriptor.cpp  method_descriptor.h  modified_utf8.cpp  modified_utf8.h  singleton.h  string_pool.h  type_cast.h
toyjvm/utilities/tests/: CMakeLists.txt  test_type_cast.cpp
(+47 files in other folders)
